# atomic_struct

./: Cargo.toml  Justfile  Readme.md
atomic_struct/: Cargo.toml  README.md
atomic_struct/src/: lib.rs
atomic_struct/tests/: basic.rs
atomic_struct_core/: Cargo.toml  README.md
atomic_struct_core/src/: lib.rs
