[package]
name = "atomic_struct"
version = "0.1.5"
edition = "2024"
license = "MIT"
authors = ["Pingoin <pingoin@pingoin.eu>"]
repository = "https://github.com/Pingoin/atomic_struct"
homepage = "https://github.com/Pingoin/atomic_struct"
documentation = "https://docs.rs/atomic_struct"
readme = "README.md"
keywords = ["atomic", "struct", "rust", "concurrency"]
categories = ["concurrency", "data-structures"]
description = "Proc-macro crate to derive atomic struct with Arc<tokio::Mutex<T>> fields"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
atomic_struct_core = { version= "0.1.5",path = "../atomic_struct_core" }  # Core-Crate

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
serde = ["atomic_struct_core/serde"]
